<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="73dp"
        android:layout_height="19dp"
        android:layout_marginBottom="22dp"
        android:text="@string/Name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/imageView7" />


    <EditText
        android:id="@+id/textView2"
        android:layout_width="215dp"
        android:layout_height="33dp"
        android:text="@string/example"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="136dp"
        android:layout_height="236dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/image_product"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="178dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:text="@string/nike6"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="313dp" />

        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                app:srcCompat="@drawable/s01tar" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/s01tar"/>
            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/s01tar"/>
            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/s01tar"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="136dp"
        android:layout_height="236dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"

            app:srcCompat="@drawable/image_product_1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="116dp"
            android:layout_height="35dp"
            android:text="@string/nike2"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="228dp"
            tools:layout_editor_absoluteY="313dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="136dp"
        android:layout_height="236dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/image_product_2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="116dp"
            android:layout_height="35dp"
            android:text="@string/nike1"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="136dp"
        android:layout_height="236dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/image_product_3" />
        <TextView
        android:id="@+id/textView6"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:text="@string/nike3"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="136dp"
        android:layout_height="236dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/image_product_4"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="116dp"
            android:layout_height="35dp"
            android:text="@string/nike5"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="136dp"
        android:layout_height="236dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/image_product_5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="116dp"
            android:layout_height="35dp"
            android:text="@string/nike4"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="228dp"
            tools:layout_editor_absoluteY="755dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="23dp"
        android:layout_height="19dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/more" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="63dp"
        android:layout_height="16dp"
        android:layout_marginEnd="162dp"
        android:text="@string/Result"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="102dp" />


</androidx.constraintlayout.widget.ConstraintLayout>