<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textView"
        android:layout_width="77dp"
        android:layout_height="19dp"
        android:layout_marginBottom="51dp"
        android:text="@string/Name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/textView2" />


    <EditText
        android:id="@+id/textView2"
        android:layout_width="235dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="55dp"
        android:autofillHints="creditCardNumber"
        android:inputType="numberSigned"
        android:text="@string/example"
        android:textColor="@color/teal_200"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="19dp"
        android:layout_height="18dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="349dp"
        android:layout_height="591dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="287dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/image_product"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="178dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nike6"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/s01tar" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/s01tar" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/s01tar" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/s01tar" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/s05tar" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/prise1"
            android:textColor="@color/purple_200"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView115"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oldprise1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sale1"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="23dp"
        android:layout_height="19dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/more" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="22dp"
        android:layout_height="23dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/imageView34"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:srcCompat="@drawable/component_1"
        android:contentDescription="@null"/>

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/vector"
        android:contentDescription="@null"/>


</androidx.constraintlayout.widget.ConstraintLayout>